<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.hsamuel.midifood.Connexion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="10">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/logo_complet"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/midifood_logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="@color/colorPrimary"
                android:inputType="text"
                android:labelFor="@+id/champ_nom"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/champ_full_name"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="@color/colorPrimary"
                android:inputType="text"
                android:labelFor="@+id/champ_nom"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/champ_full_name"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="@color/colorPrimary"
                android:inputType="phone"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <Button
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:text="Enregistrer"
        android:textSize="14sp"
        android:background="@color/colorAccent"
        android:layout_gravity="center" />

</android.support.v7.widget.LinearLayoutCompat>